# snippet

./: .bashrc  .clang-format  .clang-tidy  CMakeLists.txt  README.md  dds  t
.github/workflows/: cmake-single-platform.yml
cpp/00-basic/: operator=.cpp
cpp/01-idioms/01-pimpl/: pimpl.cpp
cpp/02-design-pattern/: 02-observer.cpp
cpp/03-concurrency-and-parallel/: 03-blocking_queue.h  04-task_queue.h  05-task_queue_test.cpp
cpp/03-concurrency_and_parallel/: 02-sync-with-promise-future.cpp
cpp/04-time_and_chrono/: 01-time_elapsed.cpp
cpp/99-utils/: 00-macro.h
cpp/concurrency_and_parallel/: condvar.cpp  producer_and_consumer.cpp
cpp/design_pattern/: singleton.cpp
cpp/idioms/pimpl/: MyInterface.cpp  MyInterface.h
cpp/time_and_chrono/: time_elapsed.cpp
cpp/utils/: zutils.cpp
shell/: .bashrc
